# Cards-Alpha

./: README.md
Cards\/: .gitignore  DEVELOPPEMENT.md  GUIDE_UTILISATEUR.md  LICENSE  README.md
Cards\/CardApp/: CardsApp.swift  ContentView.swift  ContentView.swift.old
Cards\/CardApp /: CardApp  CodingConventions.md  CoreDataOptimizer.swift  DEVELOPER_GUIDE.md  Info.plist  Makefile  Package.resolved  Package.swift  PerformanceConfiguration.md  README-DIAGNOSTIC-TOOLS.md  README-INTEGRATION.md  README.md  README_TAG_IMPLEMENTATION.md  Temp_Package.swift  analyse_et_optimise_coredata.sh  analyse_globale.sh  analyze_unified_study.md  check_dependencies.sh  check_duplicates.sh  check_swift_dependencies.sh  check_versions.sh  cline_mcp_settings.json  compile-spm.sh  compile.sh  create_xcode_project.sh  debug_project.sh  fast_debug.sh  files.sh  fix_ambiguities.sh  fix_unified_study_service.sh  launch.sh  optimisation_orchestrator.sh  power_debug.sh  rapid_debug.sh  run_core_data_optimizer.swift  setup_tools.sh  swift-build-run.sh  swift_analyzer.py  swift_files.txt  swift_visual_analysis.js  (+5 more)
Cards\/CardApp /App/: AppMain.swift  AppStartup.swift  CardApp.swift
Cards\/CardApp /Config/: Base.xcconfig  Debug.xcconfig  Release.xcconfig
Cards\/CardApp /Core/: Configuration.swift  Core.swift  Module.swift
Cards\/CardApp /analysis_tools/rust_performance_analyzer/: Cargo.toml
Cards\/CardApp /analysis_tools/rust_performance_analyzer/src/: analyzers.rs  core_data_analyzer.rs  main.rs  models.rs  reporters.rs  types.rs
Cards\/CardApp.xcodeproj/: project.pbxproj
(+239 files in other folders)
